2002-01-13  Jeff Freedman  <jeff@amy.nerble.net>

	* xdrag.cc (Xdnd): Redesigning so it can provide more visual
	feedback during the drag.

2002-01-13  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* conf/XMLEntity.*: fixed uninitialized no_close
	
2002-01-11  Jeff Freedman  <jeff@amy.nerble.net>

	* gamemap.cc,shapes/shapeinf.h: quality_flags, okay_to_take.

2002-01-11  Patrick Burke  <takhisisii@yahoo.com.au>
	* conf/*: Added basic comment support to the configuration files using
	<!-- stuff --> style comments. Currently it's only possible to add them
	between the <config> ... </config> tags, due to the way it defines the
	root node.

2002-01-10  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/shapeedit.cc: Starting to show shape info.
	* shapes/shapeinf.{cc,h} (public): 'Editing' flag added.

2002-01-11  Dominik Reichardt <gigdr@tesionmail.de>
	* FAQ,ReadMe updated
	* docs/FAQ.html and ReadMe.html updated
	* docs/xml: faq.xml, docs.xml updated
	* docs/xml: html.xsl, php.xsl changed to do proper referencing

2002-01-09  Jeff Freedman  <jeff@amy.nerble.net>

	* shapes/shapeinf.cc: Pass bg flag as a parameter so the shapes
	lib is independent of code higher up.
	* objs/egg.cc:  Fixed remove_this() for the 'caltrops' bug.

2002-01-09  Patrick Burke  <takhisisii@yahoo.com.au>
	* usecode/ucxt/*: Added ability to specify multiple functions to
	decompile on the command line. Also some namespace fiddling.

	* conf/*: Added the ability to have a 'generic' root node for the
	xmltree, rather then the default 'config', also cleaned up some of the
	external interface to Configuration, and added an additional way of
	accessing the file data through Configuration::getpairs.
	
2002-01-08  Patrick Burke  <takhisisii@yahoo.com.au>
	* audio/midi_drivers/forked_player.cc, conf/XMLEntity.cc: Fixed
	namespace related errors.

	* conf/Configuration.*: Upon loading up a new file, it clears the
	previous xmltree, rather then 'kind-of' overwriting it.