@@ -1,5 +1,7 @@
 2002-01-13  Jeff Freedman  <jeff@amy.nerble.net>
 
+	* exult.cc: Show tiles where dragged object's footprint will lie.
+
 	* xdrag.cc (Xdnd): Redesigning so it can provide more visual
 	feedback during the drag.
 
